# test

./: dodo_model.urdf
src/dodo_description/: CMakeLists.txt  package.xml
src/dodo_description/config/: dodo.rviz  imu.rviz  slam.yaml
src/dodo_description/launch/: model.launch.xml  rviz.launch.py
src/dodo_description/meshes/: Cylinder.dae  Cylinder.stl
src/dodo_description/scripts/: mpu6050_node.py  serial_node.py
src/dodo_description/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/dodo_description/urdf/: model.urdf
